created about page

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Products</a>
+              <a class="nav-link" href="product.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">About us</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href=javascript:void(0)>Features</a>
@@ -174,16 +174,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg1.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Esprit Ruffle Shirt</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -191,16 +191,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg2.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Herschel supply</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -208,16 +208,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg3.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Only Check Trouser</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -225,16 +225,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg4.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Classic Trench Coat</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -242,16 +242,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg5.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Front Pocket Jumper</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -259,16 +259,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg6.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Vintage Inspired Classic</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -276,16 +276,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg7.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Shirt in Stretch Cotton</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -293,24 +293,97 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg8.webp" alt="img">
-              <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+              <a class="viewBtn" href="product.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="javascript:void(0)">
+                <a href="product.html">
                   <h5>Pieces Metallic Printed</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="javascript:void(0)" class="btn">view</a>
+              <a href="product.html" class="btn">view</a>
             </div>
           </div>
         </div>
       </div>
       <div class="text-center">
-        <a class="theme_button secondaryBtn mt-4" href="javascript:void(0)">View more</a>
+        <a class="theme_button secondaryBtn mt-4" href="product.html">View more</a>
       </div>
-
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="section_heading text-center">
+        <h2>Testimonial</h2>
+      </div>
+      <div class="owl-carousel owl-theme cyber-testimony-slider">
+        <div class="item">
+          <div class="cyber-testimony-single">
+            <div class="cyber-testimony-single-img">
+              <img src="images/user.jpg">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
+            <h5>David Scott</h5>
+            <h6>customer</h6>
+          </div>
+        </div>
+        <div class="item">
+          <div class="cyber-testimony-single">
+            <div class="cyber-testimony-single-img">
+              <img src="images/user.jpg">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
+            <h5>David Scott</h5>
+            <h6>customer</h6>
+          </div>
+        </div>
+        <div class="item">
+          <div class="cyber-testimony-single">
+            <div class="cyber-testimony-single-img">
+              <img src="images/user.jpg">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
+            <h5>David Scott</h5>
+            <h6>customer</h6>
+          </div>
+        </div>
+        <div class="item">
+          <div class="cyber-testimony-single">
+            <div class="cyber-testimony-single-img">
+              <img src="images/user.jpg">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
+            <h5>David Scott</h5>
+            <h6>customer</h6>
+          </div>
+        </div>
+        <div class="item">
+          <div class="cyber-testimony-single">
+            <div class="cyber-testimony-single-img">
+              <img src="images/user.jpg">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
+            <h5>David Scott</h5>
+            <h6>customer</h6>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section class="section faq">
@@ -395,7 +468,6 @@
   <footer class="footer">
     <div class="container">
       <div class="footer_row">
-
         <div class="footer_col footer_col2">
           <div class="footer_colInner footer_links">
             <h5>Quick Links</h5>
@@ -519,32 +591,17 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="owl/owl.carousel.min.js"></script>
-<!-- <script>
-  $('.owl-carousel').owlCarousel({
+<script>
+  $('.cyber-testimony-slider').owlCarousel({
     loop: true,
-    margin: 21,
-    // nav: true,
+    margin: 15,
+    nav: false,
     autoplay: true,
-    center: true,
-    responsive: {
-      0: {
-        items: 1,
-        center: false,
-        margin: 0,
-      },
-      400: {
-        items: 2,
-        center: false,
-        margin: 10,
-      },
-      768: {
-        items: 3
-      },
-      1000: {
-        items: 5
-      }
-    }
-  })
-</script> -->
+    autoplayTimeout: 4000,
+    dots: true,
+    items: 1,
+    smartSpeed: 800,
+  });
+</script>
 
 </html>
