--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
    <link rel="stylesheet" href="owl/owl.carousel.min.css">
    <link rel="stylesheet" href="owl/owl.theme.default.min.css">
    <link rel="stylesheet" href="css/style.css?q=3" />
-   <title></title>
+   <title>Ecommerce</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
                      <a class="nav-link" href="javascript:void(0)">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                     <a class="theme_button primaryBtn ms-2" href="javascript:void(0)">Contact us
+                     <a class="theme_button primaryBtn ms-2" href="contact.html">Contact us
                      </a>
                   </li>
                </ul>
