--- a/contact.html
+++ b/contact.html
@@ -70,38 +70,39 @@
    <section>
       <div class="contactPage">
          <div class="contactPage_img">
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.3866446632333!2d-79.39808788485583!3d43.660927979121006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b35bbce062033%3A0xd41da48a5c00f99b!2sUniversity%20of%20Toronto!5e0!3m2!1sen!2sin!4v1656441190053!5m2!1sen!2sin"
+               width="100%" height="100%" style="border:0;" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
          <div class="contactPage_form">
-            <div class="container">
-               <div class="contactPage_formInner">
-                  <form>
-                     <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email address">
-                     </div>
-                     <div class="mb-3">
-                        <label for="phone" class="form-label">Phone number</label>
-                        <input type="email" class="form-control" id="phone" placeholder="Enter phone number">
-                     </div>
-                     <div class="mb-3">
-                        <label for="Title" class="form-label">Title</label>
-                        <select class="form-select form-select-lg mb-3" id="Title" aria-label=".form-select-lg example">
-                           <option selected disabled>Open this select menu</option>
-                           <option value="1">Title One</option>
-                           <option value="2"> Title Two</option>
-                           <option value="3">Title Three</option>
-                        </select>
-                     </div>
-                     <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" rows="3"
-                           placeholder="Write your message here"></textarea>
-                     </div>
-                     <div class="text-end">
-                        <button type="button" class="theme_button secondaryBtn">Submit</button>
-                     </div>
-                  </form>
-               </div>
+            <div class="contactPage_formInner">
+               <form>
+                  <div class="mb-3">
+                     <label for="email" class="form-label">Email address</label>
+                     <input type="email" class="form-control" id="email" placeholder="Enter email address">
+                  </div>
+                  <div class="mb-3">
+                     <label for="phone" class="form-label">Phone number</label>
+                     <input type="email" class="form-control" id="phone" placeholder="Enter phone number">
+                  </div>
+                  <div class="mb-3">
+                     <label for="Title" class="form-label">Title</label>
+                     <select class="form-select form-select-lg mb-3" id="Title" aria-label=".form-select-lg example">
+                        <option selected disabled>Open this select menu</option>
+                        <option value="1">Title One</option>
+                        <option value="2"> Title Two</option>
+                        <option value="3">Title Three</option>
+                     </select>
+                  </div>
+                  <div class="mb-3">
+                     <label for="message" class="form-label">Message</label>
+                     <textarea class="form-control" id="message" rows="3"
+                        placeholder="Write your message here"></textarea>
+                  </div>
+                  <div class="text-end">
+                     <button type="button" class="theme_button secondaryBtn">Submit</button>
+                  </div>
+               </form>
             </div>
          </div>
       </div>
