--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href=javascript:void(0)>Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)">Portfolio</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="theme_button primaryBtn ms-2" href="contact.html">Contact us
               </a>
@@ -317,10 +317,10 @@
       <div class="section_heading text-center">
         <h2>Testimonial</h2>
       </div>
-      <div class="owl-carousel owl-theme cyber-testimony-slider">
+      <div class="owl-carousel owl-theme testimonial-slider">
         <div class="item">
-          <div class="cyber-testimony-single">
-            <div class="cyber-testimony-single-img">
+          <div class="testimonial-single">
+            <div class="testimonial-single-img">
               <img src="images/user.jpg">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -332,8 +332,8 @@
           </div>
         </div>
         <div class="item">
-          <div class="cyber-testimony-single">
-            <div class="cyber-testimony-single-img">
+          <div class="testimonial-single">
+            <div class="testimonial-single-img">
               <img src="images/user.jpg">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -345,8 +345,8 @@
           </div>
         </div>
         <div class="item">
-          <div class="cyber-testimony-single">
-            <div class="cyber-testimony-single-img">
+          <div class="testimonial-single">
+            <div class="testimonial-single-img">
               <img src="images/user.jpg">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -358,8 +358,8 @@
           </div>
         </div>
         <div class="item">
-          <div class="cyber-testimony-single">
-            <div class="cyber-testimony-single-img">
+          <div class="testimonial-single">
+            <div class="testimonial-single-img">
               <img src="images/user.jpg">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -371,8 +371,8 @@
           </div>
         </div>
         <div class="item">
-          <div class="cyber-testimony-single">
-            <div class="cyber-testimony-single-img">
+          <div class="testimonial-single">
+            <div class="testimonial-single-img">
               <img src="images/user.jpg">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -473,17 +473,17 @@
             <h5>Quick Links</h5>
             <ul>
               <li>
-                <a href="javascript:void(0)">Services</a>
+                <a href="javascript:void(0)">Products</a>
               </li>
               <li>
                 <a href="javascript:void(0)">About us</a>
               </li>
-              <li>
-                <a href="javascript:void(0)">Features</a>
-              </li>
-              <li>
-                <a href="javascript:void(0)">Portfolio</a>
-              </li>
+              <!-- <li>
+                      <a href="javascript:void(0)">Features</a>
+                   </li>
+                   <li>
+                      <a href="javascript:void(0)">Portfolio</a>
+                   </li> -->
             </ul>
           </div>
         </div>
@@ -535,16 +535,6 @@
         </div>
         <div class="footer_col footer_col4">
           <div class="footer_colInner d-flex flex-column justify-content-between">
-            <!-- <div class="subscribe">
-              <h5>Subscribe US</h5>
-              <form class="d-flex">
-                <input class="form-control" type="search" placeholder="Email address" aria-label="Search" />
-                <button class="btn btn-primary" type="submit">
-                  Search
-                </button>
-              </form>
-              <span class="smallNote">Your email ID is Confidential</span>
-            </div> -->
             <div class="social">
               <h5>Social links</h5>
               <span> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -567,12 +557,6 @@
                       </use>
                     </svg>
                   </a>
-                  <!-- <a class="icon">
-                  <svg class="svg">
-                    <use xlink:href="./icons/sprite.svg#youtube" href="./icons/sprite.svg#youtube">
-                    </use>
-                  </svg>
-                </a> -->
                   <a class="icon">
                     <svg class="svg">
                       <use xlink:href="./icons/sprite.svg#instagram" href="./icons/sprite.svg#instagram">
@@ -588,11 +572,10 @@
   </footer>
 </body>
 <script src="./bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="js/jquery.js"></script>
 <script src="owl/owl.carousel.min.js"></script>
 <script>
-  $('.cyber-testimony-slider').owlCarousel({
+  $('.testimonial-slider').owlCarousel({
     loop: true,
     margin: 15,
     nav: false,
