--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,12 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About us</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href=javascript:void(0)>Features</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="javascript:void(0)">Portfolio</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a class="theme_button primaryBtn ms-2" href="contact.html">Contact us
                      </a>
@@ -86,7 +86,7 @@
                      <input type="email" class="form-control" id="phone" placeholder="Enter phone number">
                   </div>
                   <div class="mb-3">
-                     <label for="Title" class="form-label">Title</label>
+                     <label for="Title" class="form-label">Purpose of contact</label>
                      <select class="form-select form-select-lg mb-3" id="Title" aria-label=".form-select-lg example">
                         <option selected disabled>Open this select menu</option>
                         <option value="1">Title One</option>
@@ -109,8 +109,7 @@
    </section>
 </body>
 <script src="./bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="js/jquery.js"></script>
 <script src="owl/owl.carousel.min.js"></script>
 
 </html>
