--- a/product.html
+++ b/product.html
@@ -52,12 +52,12 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About us</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href=javascript:void(0)>Features</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="javascript:void(0)">Portfolio</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a class="theme_button primaryBtn ms-2" href="contact.html">Contact us
                      </a>
@@ -357,10 +357,10 @@
          <div class="section_heading text-center">
             <h2>Testimonial</h2>
          </div>
-         <div class="owl-carousel owl-theme cyber-testimony-slider">
+         <div class="owl-carousel owl-theme testimonial-slider">
             <div class="item">
-               <div class="cyber-testimony-single">
-                  <div class="cyber-testimony-single-img">
+               <div class="testimonial-single">
+                  <div class="testimonial-single-img">
                      <img src="images/user.jpg">
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -372,8 +372,8 @@
                </div>
             </div>
             <div class="item">
-               <div class="cyber-testimony-single">
-                  <div class="cyber-testimony-single-img">
+               <div class="testimonial-single">
+                  <div class="testimonial-single-img">
                      <img src="images/user.jpg">
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -385,8 +385,8 @@
                </div>
             </div>
             <div class="item">
-               <div class="cyber-testimony-single">
-                  <div class="cyber-testimony-single-img">
+               <div class="testimonial-single">
+                  <div class="testimonial-single-img">
                      <img src="images/user.jpg">
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -398,8 +398,8 @@
                </div>
             </div>
             <div class="item">
-               <div class="cyber-testimony-single">
-                  <div class="cyber-testimony-single-img">
+               <div class="testimonial-single">
+                  <div class="testimonial-single-img">
                      <img src="images/user.jpg">
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -411,8 +411,8 @@
                </div>
             </div>
             <div class="item">
-               <div class="cyber-testimony-single">
-                  <div class="cyber-testimony-single-img">
+               <div class="testimonial-single">
+                  <div class="testimonial-single-img">
                      <img src="images/user.jpg">
                   </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -429,23 +429,22 @@
    <footer class="footer">
       <div class="container">
          <div class="footer_row">
-
             <div class="footer_col footer_col2">
                <div class="footer_colInner footer_links">
                   <h5>Quick Links</h5>
                   <ul>
                      <li>
-                        <a href="javascript:void(0)">Services</a>
+                        <a href="javascript:void(0)">Products</a>
                      </li>
                      <li>
                         <a href="javascript:void(0)">About us</a>
                      </li>
-                     <li>
+                     <!-- <li>
                         <a href="javascript:void(0)">Features</a>
                      </li>
                      <li>
                         <a href="javascript:void(0)">Portfolio</a>
-                     </li>
+                     </li> -->
                   </ul>
                </div>
             </div>
@@ -497,16 +496,6 @@
             </div>
             <div class="footer_col footer_col4">
                <div class="footer_colInner d-flex flex-column justify-content-between">
-                  <!-- <div class="subscribe">
-              <h5>Subscribe US</h5>
-              <form class="d-flex">
-                <input class="form-control" type="search" placeholder="Email address" aria-label="Search" />
-                <button class="btn btn-primary" type="submit">
-                  Search
-                </button>
-              </form>
-              <span class="smallNote">Your email ID is Confidential</span>
-            </div> -->
                   <div class="social">
                      <h5>Social links</h5>
                      <span> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -529,12 +518,6 @@
                                  </use>
                               </svg>
                            </a>
-                           <!-- <a class="icon">
-                  <svg class="svg">
-                    <use xlink:href="./icons/sprite.svg#youtube" href="./icons/sprite.svg#youtube">
-                    </use>
-                  </svg>
-                </a> -->
                            <a class="icon">
                               <svg class="svg">
                                  <use xlink:href="./icons/sprite.svg#instagram" href="./icons/sprite.svg#instagram">
@@ -550,11 +533,10 @@
    </footer>
 </body>
 <script src="./bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="js/jquery.js"></script>
 <script src="owl/owl.carousel.min.js"></script>
 <script>
-   $('.cyber-testimony-slider').owlCarousel({
+   $('.testimonial-slider').owlCarousel({
       loop: true,
       margin: 15,
       nav: false,
