add product detail inks

--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg1.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Esprit Ruffle Shirt</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -191,16 +191,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg2.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Herschel supply</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -208,16 +208,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg3.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Only Check Trouser</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -225,16 +225,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg4.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Classic Trench Coat</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -242,16 +242,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg5.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Front Pocket Jumper</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -259,16 +259,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg6.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Vintage Inspired Classic</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -276,16 +276,16 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg7.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Shirt in Stretch Cotton</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
@@ -293,22 +293,22 @@
           <div class="prodctCard">
             <div class="prodctCard_img">
               <img src="./images/cardImg8.webp" alt="img">
-              <a class="viewBtn" href="product.html">Quick view</a>
+              <a class="viewBtn" href="product-detail.html">Quick view</a>
             </div>
             <div class="cardContent">
               <div class="cardContent_detail">
-                <a href="product.html">
+                <a href="product-detail.html">
                   <h5>Pieces Metallic Printed</h5>
                 </a>
                 <p>$16.64</p>
               </div>
-              <a href="product.html" class="btn">view</a>
+              <a href="product-detail.html" class="btn">view</a>
             </div>
           </div>
         </div>
       </div>
       <div class="text-center">
-        <a class="theme_button secondaryBtn mt-4" href="product.html">View more</a>
+        <a class="theme_button secondaryBtn mt-4" href="product-detail.html">View more</a>
       </div>
     </div>
   </section>
