--- a/product.html
+++ b/product.html
@@ -77,16 +77,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg1.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Esprit Ruffle Shirt</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -94,16 +94,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg2.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Herschel supply</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -111,16 +111,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg3.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Only Check Trouser</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -128,16 +128,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg4.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Classic Trench Coat</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -145,16 +145,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg5.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Front Pocket Jumper</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -162,16 +162,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg6.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Vintage Inspired Classic</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -179,16 +179,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg7.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Shirt in Stretch Cotton</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -196,16 +196,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg8.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -213,16 +213,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg9.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -230,16 +230,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg10.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -247,16 +247,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg11.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -264,16 +264,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg12.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -281,16 +281,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg13.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -298,16 +298,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg14.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -315,16 +315,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg15.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -332,16 +332,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg16.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Pieces Metallic Printed</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
